--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,71 @@
-
-
-
-
-
-.greetedButton {
-	background-color: gold;
-	margin: 5px;
+html, body {
+	margin: auto;
+	padding: auto;
+	background-color: 33CCCC;
 }
 
+footer{
+	margin: auto;
+	/*background-color: black;*/
+}
 
+.row-2{
+  background-color: 0033CC;
+	position: fixed;
+  top: 0;
+	width: 100%;
+	height: 80px;
+	margin: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+header {
+	margin: 0;
+	padding: 0;
+}
+
+.row-1{
+  background-color: 0033CC;
+  position: fixed;
+  bottom: 0;
+  color: white;
+  width: 100%;
+  margin: auto;
+  display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.greetButton:hover{
+	background-color: navy;
+	margin: 5px;
+	height: 55px;
+	width: 125px;
+}
+
+.count{
+	font-family: "Raleway";
+	font-size: 28px;
+	color: black;
+	text-shadow: 8px 4px 7px white;
+	width: 150px;
+	background-color: transparent;
+	box-shadow: 0 7px 20px 0 yellow;
+	text-align: center;
+}
+
+.outp{
+	font-family: "Raleway";
+	font-size: 28px;
+	color: white;
+  text-shadow: text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+	width: 250px;
+	background-color: #185;
+ 	box-shadow: 0 7px 20px 0 yellow, 0 8px 28px 0 yellow;
+ 	text-align: center;
+}
 
 
 /*
@@ -76,7 +133,7 @@
   .columns:first-child {
     margin-left: 0; }
 
-	.row-1 {width: 100%}
+	.row-1{width: 100%}
   .one.column,
   .one.columns                    { width: 4.66666666667%; }
   .two.columns                    { width: 13.3333333333%; }
@@ -145,7 +202,7 @@ body {
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222; }
 footer {
-  background-color: black;
+  background-color: 0033CC;
 }
 
 /* Typography
@@ -191,8 +248,8 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
   display: inline-block;
-  height: 38px;
-  padding: 0 30px;
+  height: 34px;
+  padding: 0 20px;
   color: #555;
   text-align: center;
   font-size: 11px;
@@ -202,9 +259,9 @@ input[type="button"] {
   text-transform: uppercase;
   text-decoration: none;
   white-space: nowrap;
-  background-color: transparent;
-  border-radius: 4px;
-  border: 1px solid #bbb;
+  background-color: silver;
+  border-radius: 8px;
+  border: 2px solid #bbb;
   cursor: pointer;
   box-sizing: border-box; }
 .button:hover,
