--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,13 @@
 <html>
-	<head>
-		<title>Greetings Web-app</title>
-		<link rel="stylesheet" href="/css/style.css">
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script> -->
-	</head>
 
-	<body>
-		{{{body}}}
-	</body>
+<head>
+	<title>Greetings Web-app</title>
+	<link rel="stylesheet" href="/css/style.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script>
+</head>
+
+<body>
+	{{{body}}}
+</body>
+
 </html>
