--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,5 +1,6 @@
 <div class="row-2">
 <header>
-
+  		<a href="/greetings"><button class="greetings">Go To Main</button></a>
 </header>
+<br><br></br>
 </div>
