--- a/views/greeted.handlebars
+++ b/views/greeted.handlebars
@@ -2,7 +2,7 @@
 
 <div class="greeted_Names"><br>
 
-  <h1>Names That Have Been Greeted:</h1><br>
+  <p><h1 align="center">Names That Have Been Greeted:</h1><br>
 
 <tbody>
   {{#each greeted}}
