--- a/views/greetings.handlebars
+++ b/views/greetings.handlebars
@@ -3,7 +3,7 @@
 <br><br><br></br>
 
 <div class="input" align="center">
-  <p class="count" name="counter">Counter: 0</p>
+  <p class="counter" name="counter"><label for="counter">Counter:</label>{{counter}}</p>
 <form class="" action="/greetings" method="post">
 
     <input type="text" class="name" name="id" placeholder="Enter Your Name" value=""></input><br>
