--- a/views/greeted.handlebars
+++ b/views/greeted.handlebars
@@ -1,10 +1,10 @@
 {{>header}}
 
-<div class="greeted_Names"><br>
+<div class="greeted_Names"><br><br><br></br>
 
-  <p><h1 align="center">Names That Have Been Greeted:</h1><br>
+  <p><h1 align="center"><u>Names That Have Been Greeted:</u></h1></p><br>
 
-<tbody>
+<tbody align="center">
   {{#each greeted}}
   <li>{{greetedN}}</li>
   {{/each}}
