--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,6 +1,6 @@
 <div class="row-1">
 	<br><br><br>
 <footer>
-		<a href="/greeted"><button class="greetedButton">View Names Greeted</button></a>
+		<!-- <a href="/greeted"><button class="greetedButton">View Names Greeted</button></a> -->
 </footer>
 </div>
