--- a/views/greetings.handlebars
+++ b/views/greetings.handlebars
@@ -6,7 +6,7 @@
 <form class="" action="/greetings" method="post">
   <p class="counter" name="counter"><label for="counter">Counter:</label>{{counter}}</p><br>
 
-  <a href="/greeted">View Greeted Names</a><br><br>
+  <!-- <a href="/greeted">View Greeted Names</a><br><br> -->
     <input type="text" class="name" name="id" placeholder="Enter Your Name" value=""></input><br><br>
 
     <label class="radio-inline">
