--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -4,3 +4,5 @@
 		<!-- <a href="/greeted"><button class="greetedButton">View Names Greeted</button></a> -->
 </footer>
 </div>
+
+<!-- deploy to Heroku -->
