deploy with heroku

--- a/views/greeted.handlebars
+++ b/views/greeted.handlebars
@@ -1,7 +1,7 @@
 {{>header}}
 
 <div class="greeted" align="center"><br><br><br></br>
-  <a href='/greetings'>Greet more peeps</a>
+  <a href='/'>Greet more peeps</a>
   <p><h1 align="center"><u>Names That Have Been Greeted:</u></h1></p><br>
 <tbody>
   <h3>
