--- a/views/greetings.handlebars
+++ b/views/greetings.handlebars
@@ -3,7 +3,7 @@
 <br><br><br><br></br>
 
 <div class="input" align="center">
-<form class="" action="/greetings" method="post">
+<form class="" action="/" method="post">
   <p class="counter" name="counter"><label for="counter">Counter:</label>{{counter}}</p><br>
 
   <a href="/greeted">View Greeted Names</a><br><br>
